Rebrand to Sentinel Command: Update package names, metadata, and documentation

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smart-city-frontend",
+  "name": "sentinel-command-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
